modules/core-compute/vpc.tf
resource "aws_vpc" "main" {

  cidr_block           = var.vpc_cidr 
  instance_tenancy     = "default"
  enable_dns_hostnames = true 
  enable_dns_support   = true

  tags = {
    Name = "${var.project_name}-vpc"
  }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "${var.project_name}-igw"
  }
}
